add stop archiving endpoint for cases and projects
